[package]
name = "discord_invite_to_data"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ureq = "2.9.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
base64 = "0.21.7"
chrono = "0.4.33"